# mm-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.beads/: .gitignore  config.yaml  issues.jsonl
.beads/backup/: backup_state.json  comments.jsonl  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.github/workflows/: release.yml
docs/: project-context.md
mm_cli/: __init__.py  analysis.py  applescript.py  cli.py  config.py  models.py  output.py  rules.py
tests/: __init__.py  conftest.py  test_analysis.py  test_applescript.py  test_cli.py  test_config.py  test_models.py  test_rules.py
