[project]
name = "mm-cli"
version = "0.1.0"
description = "CLI tool for MoneyMoney macOS app - retrieve accounts, transactions, categories and manage categorization via AppleScript"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
mm = "mm_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
