[project]
name = "moneymoney-cli"
version = "0.1.0"
description = "CLI tool for MoneyMoney macOS app - retrieve accounts, transactions, categories and manage categorization via AppleScript"
authors = [
    { name = "Malte Sussdorff" },
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["moneymoney", "finance", "banking", "cli", "macos", "applescript"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
mm = "mm_cli.cli:app"

[project.urls]
Homepage = "https://github.com/sussdorff/mm-cli"
Repository = "https://github.com/sussdorff/mm-cli"
Issues = "https://github.com/sussdorff/mm-cli/issues"
Changelog = "https://github.com/sussdorff/mm-cli/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mm_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/mm_cli",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/cliff.toml",
]

[dependency-groups]
dev = [
    "git-cliff>=2.12.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
